--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-openai==1.2.3
-python3.12-distutils
-transformers==4.33.0
+streamlit==1.24.1
 faiss-cpu==1.7.4
-numpy==1.25.0
 torch==2.0.1
+numpy==1.23.5
+langchain==0.0.287
+openai==0.27.4
+transformers==4.33.3
