--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-langchain-community
+langchain-community==0.3.13
 streamlit==1.24.1
 faiss-cpu==1.7.4
 torch==2.0.1
 numpy==1.23.5
-langchain==0.0.287
+langchain==0.3.13
 openai
 transformers==4.33.3
